# compile_time_util

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  code_inc_cnt.cc
include/compile_time_util/: code_inc_cnt.h  compile_time_util.h
scripts/: gen.bat
